# TxConformal

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  structure.txt  utils.py
examples/: enamine.ipynb  general_tasks.ipynb  protein_stability.ipynb
txconformal/: __init__.py  api.py
txconformal/conformal/: pvalues.py  scores.py
txconformal/features/: providers.py  quantiles.py
txconformal/selection/: sel.py
txconformal/shift/: ebal.py  ebal_cache.py  ebal_new.py  retries.py
txconformal/utils/: checks.py
