[build-system]
requires = ["setuptools>=58", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "txconformal"
version = "0.1.0"
description = "Conformal selection for drug discovery."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Ying Jin"},
  {name = "Kexin Huang"},
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-learn>=1.3", 
  "pandas>=2.0",
]

[project.urls]
Homepage = "https://github.com/txconformal/txconformal"

[tool.setuptools.packages.find]
include = ["txconformal*"]
