[metadata]
name = txconformal
version = 0.1.0
description = Entropy-balanced conformal selection under covariate shift.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License

[options]
packages = find:
install_requires =
    numpy>=1.24
    scipy>=1.10
    scikit-learn>=1.3
    pandas>=2.0
python_requires = >=3.9

[options.packages.find]
include = txconformal*
